@@ -272,6 +272,8 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon   BJC S750   (EXPERIMENTAL)
        Canon   BJC S820   (EXPERIMENTAL)
        Canon   BJC S830D  (EXPERIMENTAL)
+       Canon   BJC S900   (EXPERIMENTAL)
+       Canon   BJC S9000  (EXPERIMENTAL)
        Canon PIXMA i50    (EXPERIMENTAL)
        Canon PIXMA i70    (EXPERIMENTAL)
        Canon PIXMA i250   (EXPERIMENTAL)
